added rectangle and title
added rectangle and title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Coding Challenge</title>
+		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
+		<div class="shape">
+			<h1><center>
+			<h1>Trent Hamura</h1>
+			<h1>Student</h1></h1>
 
+
+		</div>
 	</body>
 </html>
