added chevron and added height
added chevron and added height

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 	</head>
 	<body>
 		<div class="shape">
+		<div class="shape" id="circle">
 			<h1><center>
 			<h1>Trent Hamura</h1>
 			<h1>Student</h1></h1>
+			<h1><center><img src="assets/chevron_copy.png" alt="Chevron"></h1>
+			
 
 
 		</div>
